--- a/src/Example/ExampleMvc/packages.config
+++ b/src/Example/ExampleMvc/packages.config
@@ -1,26 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="5.0.0" targetFramework="net451" />
-  <package id="jQuery" version="1.8.2" targetFramework="net451" />
-  <package id="jQuery.UI.Combined" version="1.8.24" targetFramework="net451" />
-  <package id="jQuery.Validation" version="1.10.0" targetFramework="net451" />
-  <package id="knockoutjs" version="2.2.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.Providers.Core" version="1.2" targetFramework="net451" />
-  <package id="Microsoft.AspNet.Providers.LocalDB" version="1.1" targetFramework="net451" />
-  <package id="Microsoft.AspNet.Razor" version="2.0.20715.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.WebApi" version="4.0.20710.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.20710.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net451" />
-  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="2.0.30116.0" targetFramework="net451" />
-  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="2.0.30116.0" targetFramework="net451" />
-  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net451" />
+  <package id="Antlr" version="3.5.0.2" targetFramework="net451" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
+  <package id="jQuery" version="2.1.4" targetFramework="net451" />
+  <package id="jQuery.UI.Combined" version="1.11.4" targetFramework="net451" />
+  <package id="jQuery.Validation" version="1.14.0" targetFramework="net451" />
+  <package id="knockoutjs" version="3.3.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="5.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Providers.Core" version="2.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Providers.LocalDb" version="2.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net451" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net451" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.3" targetFramework="net451" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net451" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
-  <package id="Modernizr" version="2.6.2" targetFramework="net451" />
+  <package id="Modernizr" version="2.8.3" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
-  <package id="WebGrease" version="1.3.0" targetFramework="net451" />
+  <package id="WebGrease" version="1.6.0" targetFramework="net451" />
 </packages>
