--- a/nuget/Handlebars.nuspec
+++ b/nuget/Handlebars.nuspec
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
-<package >
+<package>
   <metadata>
     <id>Handlebars</id>
-    <version>1.0.1</version>
+    <version>1.0.4</version>
     <authors>jandrewsmith</authors>
     <owners>jandrewsmith</owners>
     <licenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</licenseUrl>
@@ -15,11 +15,126 @@
     <tags></tags>
     <dependencies>
       <dependency id="Autofac" version="4.1.1" />
-      <dependency id="ClearScript.V8" version="5.4.6" />
+      <dependency id="ClearScript.V8" version="5.4.6" />      
       <dependency id="Microsoft.Bcl" version="1.1.10" />
       <dependency id="Microsoft.Bcl.Build" version="1.0.21" />
       <dependency id="Microsoft.Net.Http" version="2.2.29" />
       <dependency id="Newtonsoft.Json" version="9.0.1" />
+      <dependency id="Microsoft.AspNetCore.Antiforgery" version="1.0.1" />
+      <dependency id="Microsoft.AspNetCore.Authorization" version="1.0.0" />
+      <dependency id="Microsoft.AspNetCore.Cors" version="1.0.0" />
+      <dependency id="Microsoft.AspNetCore.Cryptography.Internal" version="1.0.0" />
+      <dependency id="Microsoft.AspNetCore.DataProtection" version="1.0.0" />
+      <dependency id="Microsoft.AspNetCore.DataProtection.Abstractions" version="1.0.0" />
+      <dependency id="Microsoft.AspNetCore.Diagnostics.Abstractions" version="1.0.0" />
+      <dependency id="Microsoft.AspNetCore.Hosting" version="1.0.0" />
+      <dependency id="Microsoft.AspNetCore.Hosting.Abstractions" version="1.0.0" />
+      <dependency id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="1.0.0" />
+      <dependency id="Microsoft.AspNetCore.Html.Abstractions" version="1.0.0" />
+      <dependency id="Microsoft.AspNetCore.Http" version="1.0.0" />
+      <dependency id="Microsoft.AspNetCore.Http.Abstractions" version="1.0.0" />
+      <dependency id="Microsoft.AspNetCore.Http.Extensions" version="1.0.0" />
+      <dependency id="Microsoft.AspNetCore.Http.Features" version="1.0.0" />
+      <dependency id="Microsoft.AspNetCore.JsonPatch" version="1.0.0" />
+      <dependency id="Microsoft.AspNetCore.Localization" version="1.0.0" />
+      <dependency id="Microsoft.AspNetCore.Mvc" version="1.0.1" />
+      <dependency id="Microsoft.AspNetCore.Mvc.Abstractions" version="1.0.1" />
+      <dependency id="Microsoft.AspNetCore.Mvc.ApiExplorer" version="1.0.1" />
+      <dependency id="Microsoft.AspNetCore.Mvc.Core" version="1.0.1" />
+      <dependency id="Microsoft.AspNetCore.Mvc.Cors" version="1.0.1" />
+      <dependency id="Microsoft.AspNetCore.Mvc.DataAnnotations" version="1.0.1" />
+      <dependency id="Microsoft.AspNetCore.Mvc.Formatters.Json" version="1.0.1" />
+      <dependency id="Microsoft.AspNetCore.Mvc.Localization" version="1.0.1" />
+      <dependency id="Microsoft.AspNetCore.Mvc.Razor" version="1.0.1" />
+      <dependency id="Microsoft.AspNetCore.Mvc.Razor.Host" version="1.0.1" />
+      <dependency id="Microsoft.AspNetCore.Mvc.TagHelpers" version="1.0.1" />
+      <dependency id="Microsoft.AspNetCore.Mvc.ViewFeatures" version="1.0.1" />
+      <dependency id="Microsoft.AspNetCore.Razor" version="1.0.0" />
+      <dependency id="Microsoft.AspNetCore.Razor.Runtime" version="1.0.0" />
+      <dependency id="Microsoft.AspNetCore.Routing" version="1.0.1" />
+      <dependency id="Microsoft.AspNetCore.Routing.Abstractions" version="1.0.1" />
+      <dependency id="Microsoft.AspNetCore.TestHost" version="1.0.0" />
+      <dependency id="Microsoft.AspNetCore.WebUtilities" version="1.0.0" />
+      <dependency id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" />
+      <dependency id="Microsoft.CodeAnalysis.Common" version="1.3.2" />
+      <dependency id="Microsoft.CodeAnalysis.CSharp" version="1.3.2" />
+      <dependency id="Microsoft.CSharp" version="4.0.1" />
+      <dependency id="Microsoft.DotNet.InternalAbstractions" version="1.0.0" />
+      <dependency id="Microsoft.Extensions.Caching.Abstractions" version="1.0.0" />
+      <dependency id="Microsoft.Extensions.Caching.Memory" version="1.0.0" />
+      <dependency id="Microsoft.Extensions.Configuration" version="1.0.0" />
+      <dependency id="Microsoft.Extensions.Configuration.Abstractions" version="1.0.0" />
+      <dependency id="Microsoft.Extensions.Configuration.EnvironmentVariables" version="1.0.0" />
+      <dependency id="Microsoft.Extensions.DependencyInjection" version="1.0.0" />
+      <dependency id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.0.0" />
+      <dependency id="Microsoft.Extensions.DependencyModel" version="1.0.0" />
+      <dependency id="Microsoft.Extensions.FileProviders.Abstractions" version="1.0.0" />
+      <dependency id="Microsoft.Extensions.FileProviders.Composite" version="1.0.0" />
+      <dependency id="Microsoft.Extensions.FileProviders.Physical" version="1.0.0" />
+      <dependency id="Microsoft.Extensions.FileSystemGlobbing" version="1.0.0" />
+      <dependency id="Microsoft.Extensions.Globalization.CultureInfoCache" version="1.0.0" />
+      <dependency id="Microsoft.Extensions.Localization" version="1.0.0" />
+      <dependency id="Microsoft.Extensions.Localization.Abstractions" version="1.0.0" />
+      <dependency id="Microsoft.Extensions.Logging" version="1.0.0" />
+      <dependency id="Microsoft.Extensions.Logging.Abstractions" version="1.0.0" />
+      <dependency id="Microsoft.Extensions.ObjectPool" version="1.0.0" />
+      <dependency id="Microsoft.Extensions.Options" version="1.0.0" />
+      <dependency id="Microsoft.Extensions.PlatformAbstractions" version="1.0.0" />
+      <dependency id="Microsoft.Extensions.Primitives" version="1.0.0" />
+      <dependency id="Microsoft.Extensions.WebEncoders" version="1.0.0" />
+      <dependency id="Microsoft.Net.Http.Headers" version="1.0.0" />
+      <dependency id="System.AppContext" version="4.1.0" />
+      <dependency id="System.Buffers" version="4.0.0" />
+      <dependency id="System.Collections" version="4.0.11" />
+      <dependency id="System.Collections.Concurrent" version="4.0.12" />
+      <dependency id="System.Collections.Immutable" version="1.2.0" />
+      <dependency id="System.ComponentModel" version="4.0.1" />
+      <dependency id="System.ComponentModel.Primitives" version="4.1.0" />
+      <dependency id="System.ComponentModel.TypeConverter" version="4.1.0" />
+      <dependency id="System.Console" version="4.0.0" />
+      <dependency id="System.Diagnostics.Contracts" version="4.0.1" />
+      <dependency id="System.Diagnostics.Debug" version="4.0.11" />
+      <dependency id="System.Diagnostics.DiagnosticSource" version="4.0.0" />
+      <dependency id="System.Diagnostics.FileVersionInfo" version="4.0.0" />
+      <dependency id="System.Diagnostics.StackTrace" version="4.0.1" />
+      <dependency id="System.Diagnostics.Tools" version="4.0.1" />
+      <dependency id="System.Dynamic.Runtime" version="4.0.11" />
+      <dependency id="System.Globalization" version="4.0.11" />
+      <dependency id="System.IO" version="4.1.0" />
+      <dependency id="System.IO.FileSystem" version="4.0.1" />
+      <dependency id="System.IO.FileSystem.Primitives" version="4.0.1" />
+      <dependency id="System.Linq" version="4.1.0" />
+      <dependency id="System.Linq.Expressions" version="4.1.0" />
+      <dependency id="System.Reflection" version="4.1.0" />
+      <dependency id="System.Reflection.Extensions" version="4.0.1" />
+      <dependency id="System.Reflection.Metadata" version="1.3.0" />
+      <dependency id="System.Reflection.Primitives" version="4.0.1" />
+      <dependency id="System.Resources.ResourceManager" version="4.0.1" />
+      <dependency id="System.Runtime" version="4.1.0" />
+      <dependency id="System.Runtime.Extensions" version="4.1.0" />
+      <dependency id="System.Runtime.Handles" version="4.0.1" />
+      <dependency id="System.Runtime.InteropServices" version="4.1.0" />
+      <dependency id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" />
+      <dependency id="System.Runtime.Numerics" version="4.0.1" />
+      <dependency id="System.Runtime.Serialization.Primitives" version="4.1.1" />
+      <dependency id="System.Security.Cryptography.Algorithms" version="4.2.0" />
+      <dependency id="System.Security.Cryptography.Encoding" version="4.0.0" />
+      <dependency id="System.Security.Cryptography.Primitives" version="4.0.0" />
+      <dependency id="System.Security.Cryptography.X509Certificates" version="4.1.0" />
+      <dependency id="System.Text.Encoding" version="4.0.11" />
+      <dependency id="System.Text.Encoding.CodePages" version="4.0.1" />
+      <dependency id="System.Text.Encoding.Extensions" version="4.0.11" />
+      <dependency id="System.Text.Encodings.Web" version="4.0.0" />
+      <dependency id="System.Threading" version="4.0.11" />
+      <dependency id="System.Threading.Tasks" version="4.0.11" />
+      <dependency id="System.Threading.Tasks.Parallel" version="4.0.1" />
+      <dependency id="System.Threading.Thread" version="4.0.0" />
+      <dependency id="System.Xml.ReaderWriter" version="4.0.11" />
+      <dependency id="System.Xml.XDocument" version="4.0.11" />
+      <dependency id="System.Xml.XmlDocument" version="4.0.1" />
+      <dependency id="System.Xml.XPath" version="4.0.1" />
+      <dependency id="System.Xml.XPath.XDocument" version="4.0.1" />
+      <dependency id="Wire" version="0.8.1" />
     </dependencies>
     <references>
       <reference file="ClearScript.dll" />
@@ -28,22 +143,24 @@
       <reference file="Handlebars.WebApi.dll" />
       <reference file="ClearScriptV8-32.dll" />
       <reference file="ClearScriptV8-64.dll" />
-      <reference file="v8-ia32.dll" />
-      <reference file="v8-x64.dll" />
-    </references>
+    </references>    
+    <contentFiles>
+      <files include="any/**/*.dll" buildAction="None" copyToOutput="true" flatten="true" />
+      <files include="any/**/*.pdb" buildAction="None" copyToOutput="true" flatten="true" />
+    </contentFiles>
   </metadata>
   <files>
     <!-- Include everything in \build -->
-    <file src="..\build\net462\ClearScript.dll" target="lib" />
-    <file src="..\build\net462\ClearScriptEngine.dll" target="lib" />
-    <file src="..\build\net462\Handlebars.dll" target="lib" />
-    <file src="..\build\net462\Handlebars.pdb" target="lib" />
-    <file src="..\build\net462\Handlebars.WebApi.dll" target="lib" />
-    <file src="..\build\net462\Handlebars.WebApi.pdb" target="lib" />
-    <file src="..\build\net462\ClearScriptV8-32.dll" target="lib" />
-    <file src="..\build\net462\ClearScriptV8-64.dll" target="lib" />
-    <file src="..\build\net462\v8-ia32.dll" target="lib" />
-    <file src="..\build\net462\v8-x64.dll" target="lib" />
+    <file src="..\build\net462\ClearScript.dll" target="lib\net462" />
+    <file src="..\build\net462\ClearScriptEngine.dll" target="lib\net462" />
+    <file src="..\build\net462\Handlebars.dll" target="lib\net462" />
+    <file src="..\build\net462\Handlebars.pdb" target="lib\net462" />
+    <file src="..\build\net462\Handlebars.WebApi.dll" target="lib\net462" />
+    <file src="..\build\net462\Handlebars.WebApi.pdb" target="lib\net462" />
+    <file src="..\build\net462\ClearScriptV8-32.dll" target="lib\net462" />
+    <file src="..\build\net462\ClearScriptV8-64.dll" target="lib\net462" />
+    <file src="..\build\net462\v8-ia32.dll" target="contentFiles\any\net462" />
+    <file src="..\build\net462\v8-x64.dll" target="contentFiles\any\net462" />
     <!-- Other files -->
     <!-- ... -->
   </files>
